<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="Bacis_Parameter_axis_typ" Id="{1afea4c8-0994-0dfe-1006-4b918227ca38}">
    <Declaration><![CDATA[TYPE Bacis_Parameter_axis_typ : 	
	STRUCT  (*parameter structure*)
		ThreadName			: STRING[20];
		PosForLog			: REAL;//USINT;
		Position 			: LREAL; (*target-position for MoveAbsolute-Command*)
		Distance 			: LREAL; (*distance for MoveAdditive-Command*)
		Velocity 			: LREAL; (*velocity for MoveVelocity-Command*)
		Direction 			: MC_Direction ; (*direction for commanded movements*)
		Acceleration 		: LREAL; (*acceleration for commanded movements*)
		Deceleration 		: LREAL; (*deceleration for commanded movements*)
		EncoderOffset 		: DINT;
		JogVelocity 		: LREAL; (*velocity for jogging movement*)
		JogMod				: E_JogMode:= MC_JOGMODE_CONTINOUS;
		JogPosition			: LREAL ;//Relative distance for movements inMC_JOGMODE_INCHING mode
		HomeOptions         : ST_HomeOptions;
		Jerk 				: LREAL;
		Options 			: ST_MoveOptions ;
		BufferMode			: MC_BufferMode ;
		VelFactor 			: LREAL := 1.0; (*1.0 = 100% *)(*for Mc_SetOverride*)
		AccFactor 			: LREAL := 1.0; (*1.0 = 100% *)(*for Mc_SetOverride*)
		JerkFactor			: LREAL := 1.0; (*1.0 = 100% *)(*for Mc_SetOverride*)		
		pcNetId				: T_AmsNetID ; (* PC NetID*)		
		ecNetId				: T_AmsNetID ; (* EtherCAT NetID*)		
		ecNetIdArr			: T_AmsNetIdArr ; (* EtherCAT NetID*)		
		Drive				: Drive_Parameter_typ;		
		RatedCurrent 		: LREAL;
		Ratedtorque 		: LREAL;  //[Nm]
	//	MotorID             : eMotorID;
		pFlowID				: POINTER TO DINT;
	//	SubsysID			: eSubsystemID;
		Limits				: Motion_Limit_Parameter;
	END_STRUCT
END_TYPE


]]></Declaration>
  </DUT>
</TcPlcObject>