<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.3">
  <DUT Name="eStationNo" Id="{6d0d7f7d-573b-0f0a-0ebd-a257369309e6}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
//{attribute 'strict'}
{attribute 'to_string'}
TYPE eStationNo :
(
	Station1 := 1,
	Station2 := 2,
	Station3 := 3,
	Station4 := 4,
	Station5 := 5,
	Station6 := 6,
	Station7 := 7
)DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>